MCA App/Release/MCA Dev Org/src/objects/Assignment_Template__c.object
<CustomObject>
    <description>The Assignment Template object handles the assignment and reassignment of leads.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Assignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rerouting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Assignment Template</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Assignment Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assignment Template</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>